# Harmony

./: .env  .gdbinit  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs  extract_exec.sh  go.sh  justfile  limine-test.cfg  limine.cfg  linker.ld  rust-toolchain.toml  virtual_memory_segmentation.md
.github/workflows/: rust.yml
arch/: x86_64-unknown-none.json
articles/: ACPI - OSDev Wiki.html  AML - OSDev Wiki.html  APIC - OSDev Wiki.html  Boot Sequence - OSDev Wiki.html  Global Descriptor Table - OSDev Wiki.html  MADT - OSDev Wiki.html  PS_2 Keyboard - OSDev Wiki.html  RSDP - OSDev Wiki.html
articles/Boot Sequence - OSDev Wiki_files/: load_006.es
athena-os-book/: book.toml
athena-os-book/src/: capabilities.md  introduction.md  overview.md
athena/bitalloc/: Cargo.toml
athena/booter/: Cargo.toml
athena/builder/: Cargo.toml
athena/caps/: Cargo.toml
athena/kapi/: Cargo.toml
athena/kernel/: Cargo.toml  build.rs  linker.ld
athena/kernel/programs/: Makefile  hello.asm  init
athena/kernel/src/: arch.rs  bump_allocator.rs  capabilities.rs  component.rs  components.rs  kptr.rs  main.rs  proc.rs  retyping.rs  sched.rs  serial.rs  sync.rs  sys.rs  syscall.rs  testing.rs  tests.rs  thread.rs  util.rs
athena/kernel/src/arch/: x64.rs  x86_64.rs
athena/kernel/src/arch/x64/: context.rs  execution.rs  gdt.rs  int.rs  interrupts.rs  mm.rs  timer.rs
athena/kernel/src/arch/x64/context/: privileged.rs  userspace.rs
athena/kernel/src/arch/x64/int/: handlers.rs
athena/kernel/src/arch/x64/interrupts/: handlers.rs
athena/kernel/src/arch/x64/mm/: addrspace.rs  frames.rs  heap.rs  kptr.rs  paging.rs  retyping.rs
athena/kernel/src/arch/x86_64/: bootup.rs  exec.rs  gdt.rs  paging.rs
athena/kernel/src/arch/x86_64/interrupts/: handlers.rs
athena/kernel/src/arch/x86_64/paging/: frames.rs  page_table.rs  physical_address.rs  virtual_address.rs
athena/kernel/src/capabilities/: caps.rs  trie.rs
athena/kernel/src/ksync/: executor.rs  mpsc.rs
athena/kernel/src/ksync/executor/: task.rs
athena/kernel/src/sched/: block_queue.rs  kthread.rs  scheduler.rs  task.rs  uthread.rs
athena/kernel/src/sched/task/: uthread.rs
athena/kernel/src/sync/: mutex.rs  sem.rs  signal.rs
athena/kernel/src/sys/: display.rs  serial.rs
athena/librs/: Cargo.toml
athena/microkernel/: Cargo.toml  build.rs  linker.ld
athena/microkernel/src/: bootstrap.rs  caps.rs  component.rs  kptr.rs  main.rs  resources.rs  retyping.rs  serial.rs  sync.rs  syscall.rs  tests.rs  util.rs
athena/microkernel/src/arch/: x86_64.rs
athena/microkernel/src/arch/x86_64/: bootstrap.rs  execution_context.rs  gdt.rs  interrupts.rs  paging.rs  port.rs  registers.rs  timer.rs
athena/microkernel/src/arch/x86_64/interrupts/: handlers.rs
athena/microkernel/src/arch/x86_64/paging/: page_table.rs
athena/microkernel/src/caps/: trie.rs
athena/microkernel/src/sync/: atomic_ref_cell.rs
athena/singleton/: Cargo.toml
athena/trie/: Cargo.toml
athena/x64/: Cargo.toml
athena/x64/src/: context.rs  int.rs  lib.rs  mm.rs  timer.rs
athena/x64/src/context/: privileged.rs  userspace.rs
bitalloc/src/: bitmap.rs  lib.rs
book/: book.toml
book/src/: SUMMARY.md  capabilities.md  introduction.md  memory_management.md  overview.md
bootinfo/: Cargo.toml
bootinfo/src/: lib.rs
bootloader/: Cargo.toml  README.md
bootloader/src/: arch.rs  lib.rs  main.rs  mem.rs  sys.rs
bootloader/src/arch/: x86_64_utils.rs
bootloader/src/sys/: alloc.rs  fs.rs  io.rs  mem.rs
builder/: Cargo.toml  build.rs
builder/src/: main.rs
docs/: Boot Process.md  Capability Management.md  Memory Management.md  virtual_memory_segmentation.md
framed/src/: console.rs  lib.rs
harmony/entry/: Cargo.toml
harmony/kapi/: Cargo.toml
harmony/kapi/src/: lib.rs  ops.rs  raw.rs  userspace.rs
harmony/kapi/src/ops/: cap_table.rs  hardware.rs  ipc.rs  memory.rs  paging.rs  thread.rs
harmony/kapi/src/userspace/: cap_management.rs  cap_managment.rs  structures.rs  sync_call.rs
harmony/kapi/src/userspace/paging/: x86_64.rs
harmony/kapi/src/userspace/paging/x86_64/: addr.rs
harmony/kernel/: Cargo.toml  README.md  build.rs  linker.ld
harmony/kernel/src/: bump_allocator.rs  caps.rs  component.rs  core_local.rs  kptr.rs  main.rs  retyping.rs  syscall.rs  testing.rs
harmony/kernel/src/arch/x86_64/: bootup.rs  exec.rs  gdt.rs  instructions.rs  interrupts.rs  paging.rs  registers.rs  timer.rs
harmony/kernel/src/arch/x86_64/interrupts/: handlers.rs
harmony/kernel/src/arch/x86_64/paging/: frames.rs  page_table.rs  pages.rs  virtual_address.rs
harmony/loader/: Cargo.toml
harmony/stack_list/: Cargo.toml
harmony/sync/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: main.rs  proc.rs  singleton.rs  sys.rs
kernel/src/arch/: x64.rs
kernel/src/arch/x64/: context.rs  gdt.rs  inst.rs  int.rs  mm.rs
kernel/src/ksync/: executor.rs  mpsc.rs
kernel/src/sys/: drivers.rs  gdt.rs  interrupts.rs  memory.rs
kernel/src/sys/drivers/: pit8253.rs
kernel/src/sys/interrupts/: async_interrupt.rs
kmain/: Cargo.toml
kmain/.cargo/: config.toml
kmain/src/: display.rs  interrupts.rs  ksync.rs  lib.rs  live_static.rs  memory.rs  singleton.rs  sys.rs
kmain/src/ksync/: executor.rs
kmain/src/ksync/executor/: task.rs
kmain/src/sys/: display.rs  drivers.rs  gdt.rs  interrupts.rs  io.rs  memory.rs  time.rs
kmain/src/sys/drivers/: pit8253.rs
kmain/src/sys/interrupts/: async_interrupt.rs
kmain/src/sys/time/: timer.rs
limine/: GNUmakefile  config.h  config.status  configure  freestanding-toolchain  limine.cfg  version
limine/common-bios/: console.d  entry.s2.d  entry.s3.d  limine.elf  limine_nomap.elf  limine_nos3map.elf  limine_stage2only.elf  linker.ld  linker_nomap.ld  linker_nos2map.ld  linker_stage2only.ld  menu.d  sbat.d
limine/common-uefi-aarch64/: BOOTAA64.EFI  console.d  efi_thunk.d  entry.s2.d  entry.s3.d  limine.elf  limine_nomap.elf  linker.ld  linker_nomap.ld  menu.d  menu_thunk.d  sbat.d
limine/common-uefi-ia32/: BOOTIA32.EFI  console.d  entry.s2.d  menu.d  (+6 more)
memory/: Cargo.toml
ralloc/: Cargo.toml
(+325 files in other folders)
