[workspace]
members = [
  "harmony/kapi",
  "harmony/kernel",
  "harmony/sync",
  "harmony/trie",
  "harmony/userspace/booter",
  "harmony/userspace/librs",
]

resolver = "2"
default-members = ["harmony/kernel"]

[workspace.dependencies]
sync = { path = "harmony/sync" }
trie = { path = "harmony/trie" }
kapi = { path = "harmony/kapi" }

[profile.dev]
debug = "full"
opt-level = 1

[profile.release]
debug = "full"
