[workspace]
members = [
  "harmony/kapi",
  "harmony/kernel",
  "harmony/loader",
  "harmony/stack_list",
  "harmony/sync",
  "harmony/trie",
  "harmony/userspace/booter",
  "harmony/userspace/examples/*",
  "harmony/userspace/serial",
]

resolver = "2"
default-members = ["harmony/kernel"]

[workspace.dependencies]
sync = { path = "harmony/sync" }
trie = { path = "harmony/trie" }
kapi = { path = "harmony/kapi" }
stack_list = { path = "harmony/stack_list" }
serial = { path = "harmony/userspace/serial" }
loader = { path = "harmony/loader" }

[profile.dev]
debug = "full"
opt-level = 1

[profile.release]
debug = "full"
incremental = true
