[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.14.0"
log = "0.4"
bootinfo = { path = "../bootinfo" }
goblin = { version = "0.5", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
