[package]
name = "kmain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bootinfo = { path = "../bootinfo" }
framed = { path = "../framed" }
log = "0.4"
spin = "0.9"
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
