[package]
name = "kmain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bootinfo = { path = "../bootinfo" }
framed = { path = "../framed" }
bitalloc = { path = "../bitalloc" }
linked_list_allocator = "0.10"
log = "0.4"
x86_64 = "0.14"
pic8259 = "0.10.2"
pc-keyboard = "0.5"
critical-section = { version = "1.1", features = ["restore-state-bool"] }
atomic_refcell = "0.1"

[dependencies.once_cell]
version = "1.16"
default-features = false
features = ["critical-section"]

[dependencies.crossbeam]
version = "0.8"
default-features = false
features = ["alloc"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["async-await"]
