[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "=0.11.0"
framed = { path = "../framed" }
log = "0.4"
critical-section = { version = "1.1", features = ["restore-state-bool"] }
atomic_refcell = "0.1"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
singleton = { path = "../singleton" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch = { path = "../x64", package = "x64" }

[dependencies.once_cell]
version = "1.17"
default-features = false
features = ["critical-section"]

[dependencies.crossbeam]
version = "0.8"
default-features = false
features = ["alloc"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["async-await"]

