[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "=0.11.0"
critical-section = { version = "1.1", features = ["restore-state-bool"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
log = "0.4"
singleton = { path = "../singleton" }
tailcall = { git = "https://github.com/adsnaider/tailcall.git", branch = "no_std" }

[dependencies.once_cell]
version = "1.17"
default-features = false
features = ["critical-section"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
bitalloc = { path = "../bitalloc" }
pic8259 = "0.10.2"
uart_16550 = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies.goblin]
version = "0.8"
default-features = false
features = ["elf64"]
