[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = { version = "0.2.0", features = ["ipaddr"] }

[target.'cfg(target_arch = "x86_64")'.dependencies.goblin]
version = "0.8"
default-features = false
features = ["elf64"]
