[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = { version = "0.2.0", features = ["ipaddr"] }
critical-section = { version = "1.1", features = ["restore-state-bool"] }
once_cell = { version = "1.19.0", default-features = false, features = [
  "critical-section",
] }
uart_16550 = "0.3.0"
log = "0.4.21"
pic8259 = "0.10.4"
include_bytes_aligned = "0.1.3"
elain = "0.3"
tailcall = "0.1.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64_impl = { package = "x86_64", version = "0.15" }

[target.'cfg(target_arch = "x86_64")'.dependencies.goblin]
version = "0.8"
default-features = false
features = ["elf64"]
