[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync = { workspace = true }
trie = { workspace = true }
kapi = { workspace = true, features = ["from_errors"] }
serial = { workspace = true }
loader = { workspace = true }

limine = { version = "0.2.0", features = ["ipaddr"] }
uart_16550 = "0.3.0"
log = "0.4.21"
pic8259 = "0.10.4"
include_bytes_aligned = "0.1.3"
elain = "0.3"
heapless = "0.8.0"
tar-no-std = "0.3.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64_impl = { package = "x86_64", version = "0.15" }
